--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
       <div class="game-container">
         <h3>Play a Game</h3>
         <div>
-          <script src="https://szhong.4399.com/4399swf//upload_swf/ftp37/gamehwq/20220105/14/index.htm"></script>
+          <script src="https://szhong.4399.com/4399swf//upload_swf/ftp36/liuxinyu/20210521/jj2/index.html"></script>
         </div>
         <div class="elfsight-app-588e5424-90d8-4f83-ae13-7e948c47b70f" data-elfsight-app-lazy></div>
       </div>
