--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
             padding: 0;
             background-color: #f4f4f9;
             color: #333;
+            background-image: url('https://example.com/fire-background.jpg'); /* Replace with your fire image URL */
+            background-repeat: no-repeat;
+            background-position: left top, right top;
+            background-size: 250px 100%;
         }
         header {
             background-color: #0056b3;
@@ -29,6 +33,8 @@
             background-color: #fff;
             border-radius: 8px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            position: relative;
+            z-index: 10;
         }
         h2 {
             color: #0056b3;
@@ -55,6 +61,26 @@
             background-color: #0056b3;
             color: white;
         }
+
+        /* Side fire graphics styling */
+        .fire-side-left, .fire-side-right {
+            position: absolute;
+            top: 0;
+            width: 250px;
+            height: 100%;
+            background-image: url('https://example.com/fire-side.jpg'); /* Replace with your fire image URL */
+            background-size: cover;
+            background-position: center;
+            opacity: 0.7;
+            z-index: 1;
+        }
+        .fire-side-left {
+            left: 0;
+        }
+        .fire-side-right {
+            right: 0;
+        }
+
     </style>
 </head>
 <body>
@@ -65,6 +91,10 @@
         Kalamazoo, MI | 616.337.4017 | <a href="mailto:cadencarr.business@gmail.com" style="color: white;">cadencarr.business@gmail.com</a>
     </p>
 </header>
+
+<!-- Fire graphics on the sides -->
+<div class="fire-side-left"></div>
+<div class="fire-side-right"></div>
 
 <section>
     <div class="experience">
@@ -122,6 +152,10 @@
 <footer>
     <p>Contact: <a href="mailto:cadencarr.business@gmail.com" style="color: white;">cadencarr.business@gmail.com</a></p>
 </footer>
+
+<!-- Embed code from Elfsight -->
+<script src="https://static.elfsight.com/platform/platform.js" async></script>
+<div class="elfsight-app-588e5424-90d8-4f83-ae13-7e948c47b70f" data-elfsight-app-lazy></div>
 
 </body>
 </html>
