--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         footer {
             text-align: center;
             padding: 10px;
-            background-color: #0056b3;
+            background-color: #ff9900;
             color: white;
         }
 
