changing more colors

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             background-size: 250px 100%;
         }
         header {
-            background-color: #0056b3;
+            background-color: #035511;
             color: #fff;
             padding: 20px;
             text-align: center;
@@ -37,7 +37,8 @@
             z-index: 10;
         }
         h2 {
-            color: #0056b3;
+            color: #1a4600
+            ;
         }
         .contact-info {
             font-size: 1.1em;
@@ -58,7 +59,7 @@
         footer {
             text-align: center;
             padding: 10px;
-            background-color: #ff9900;
+            background-color: #035511;
             color: white;
         }
 
