--- a/index.html
+++ b/index.html
@@ -3,160 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Caden Carr's Resume</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f9;
-            color: #333;
-            background-image: url('https://example.com/fire-background.jpg'); /* Replace with your fire image URL */
-            background-repeat: no-repeat;
-            background-position: left top, right top;
-            background-size: 250px 100%;
-        }
-        header {
-            background-color: #035511;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-        }
-        header h1 {
-            margin: 0;
-            font-size: 2.5em;
-        }
-        section {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            position: relative;
-            z-index: 10;
-        }
-        h2 {
-            color: #1a4600
-            ;
-        }
-        .contact-info {
-            font-size: 1.1em;
-            margin-bottom: 20px;
-        }
-        .section-title {
-            font-weight: bold;
-        }
-        ul {
-            padding-left: 20px;
-        }
-        .experience, .education, .involvement {
-            margin-bottom: 30px;
-        }
-        .experience ul, .education ul, .involvement ul {
-            list-style-type: square;
-        }
-        footer {
-            text-align: center;
-            padding: 10px;
-            background-color: #035511;
-            color: white;
-        }
-
-        /* Side fire graphics styling */
-        .fire-side-left, .fire-side-right {
-            position: absolute;
-            top: 0;
-            width: 250px;
-            height: 100%;
-            background-image: url('https://example.com/fire-side.jpg'); /* Replace with your fire image URL */
-            background-size: cover;
-            background-position: center;
-            opacity: 0.7;
-            z-index: 1;
-        }
-        .fire-side-left {
-            left: 0;
-        }
-        .fire-side-right {
-            right: 0;
-        }
-
-    </style>
+    <title>Photography Company</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-<header>
-    <h1>Caden Carr</h1>
-    <p class="contact-info">
-        Kalamazoo, MI | 616.337.4017 | <a href="mailto:cadencarr.business@gmail.com" style="color: white;">cadencarr.business@gmail.com</a>
-    </p>
-</header>
-
-<!-- Fire graphics on the sides -->
-<div class="fire-side-left"></div>
-<div class="fire-side-right"></div>
-
-<section>
-    <div class="experience">
-        <h2>Experience</h2>
-        <div class="job">
-            <p class="section-title">WMUx, Student LAN Technician (2024 – Present)</p>
-            <p>Kalamazoo, MI</p>
+    <header>
+        <h1>Photography Company</h1>
+        <nav>
             <ul>
-                <li>Provided dedicated troubleshooting and technical support to administrative staff, ensuring efficient resolution of hardware and software issues.</li>
-                <li>Assisted in user account management and permissions setup through Active Directory while utilizing System Center Configuration Manager (SCCM) for efficient software deployment and system updates across administrative offices.</li>
-                <li>Collaborated with IT teams to implement new technologies and upgrades specifically tailored for administrative needs.</li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="pricing.html">Pricing</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
             </ul>
-        </div>
-        <div class="job">
-            <p class="section-title">Haworth College of Business, Recruitment Ambassador (2024 – Present)</p>
-            <p>Kalamazoo, MI</p>
-            <ul>
-                <li>Provided exceptional customer service by assisting students with tours, inquiries, and recommendations, ensuring a positive experience.</li>
-                <li>Supported prospective students by answering questions and providing guidance on admissions processes.</li>
-                <li>Assisted in organizing and executing admissions and orientation events to enhance student enrollment.</li>
-            </ul>
-        </div>
-    </div>
-
-    <div class="education">
-        <h2>Education</h2>
-        <p><strong>Western Michigan University, B.B.A. Haworth College of Business</strong> (2023 - 2026)</p>
-        <p>Major: Computer Information Systems | GPA: 3.80</p>
-        <p>Expected Minor: General Business</p>
-    </div>
-
-    <div class="involvement">
-        <h2>Involvement</h2>
-        <div class="activity">
-            <p class="section-title">BAIT, Business Analytics & Information Technology (2023 – Present)</p>
-            <ul>
-                <li>Position: President | Lead events, plan conferences, and host career spotlights.</li>
-            </ul>
-        </div>
-        <div class="activity">
-            <p class="section-title">Broncos IGNITE! (2024 – Present)</p>
-            <ul>
-                <li>Position: Leader | Student leader in training. Only 30 students part of this program must be recommended by faculty.</li>
-            </ul>
-        </div>
-        <div class="activity">
-            <p class="section-title">Cybersecurity Club (2024 – Present)</p>
-            <ul>
-                <li>Position: Member | Attended events and collaborated with BAIT.</li>
-            </ul>
-        </div>
-    </div>
-</section>
-
-<footer>
-    <p>Contact: <a href="mailto:cadencarr.business@gmail.com" style="color: white;">cadencarr.business@gmail.com</a></p>
-</footer>
-
-<!-- Embed code from Elfsight -->
-<script src="https://static.elfsight.com/platform/platform.js" async></script>
-<div class="elfsight-app-588e5424-90d8-4f83-ae13-7e948c47b70f" data-elfsight-app-lazy></div>
-
+        </nav>
+    </header>
+    <section id="home">
+        <h2>Welcome to Our Photography Company</h2>
+        <p>Capturing moments that last forever.</p>
+    </section>
+    <footer>
+        <p>&copy; 2025 Photography Company. All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
+
