--- a/index.html
+++ b/index.html
@@ -3,27 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Photography Company</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Faber Photography</title>
+    <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Special Elite', cursive;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            height: 100vh;
+            background-color: #1a1a1a;
+            color: white;
+        }
+        nav {
+            width: 200px;
+            display: flex;
+            flex-direction: column;
+            padding: 20px;
+            background-color: #111;
+        }
+        nav a {
+            text-decoration: none;
+            color: white;
+            font-size: 20px;
+            margin-bottom: 15px;
+            transition: 0.3s;
+        }
+        nav a:hover {
+            color: #f0a500;
+        }
+        .content {
+            flex-grow: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            font-size: 32px;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Photography Company</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="pricing.html">Pricing</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-            </ul>
-        </nav>
-    </header>
-    <section id="home">
-        <h2>Welcome to Our Photography Company</h2>
-        <p>Capturing moments that last forever.</p>
-    </section>
-    <footer>
-        <p>&copy; 2025 Photography Company. All Rights Reserved.</p>
-    </footer>
+    <nav>
+        <a href="#home">Home</a>
+        <a href="#pricing">Pricing</a>
+        <a href="#portfolio">Portfolio</a>
+        <a href="#about">About</a>
+    </nav>
+    <div class="content">
+        FABER PHOTOGRAPHY
+    </div>
 </body>
 </html>
+
 
