--- a/portfolio.html
+++ b/portfolio.html
@@ -22,11 +22,20 @@
       <h2>Portfolio</h2>
       <div class="portfolio-grid">
         <!-- Replace these divs with your actual images -->
-        <div class="portfolio-item">Image Placeholder</div>
-        <div class="portfolio-item">Image Placeholder</div>
-        <div class="portfolio-item">Image Placeholder</div>
-        <div class="portfolio-item">Image Placeholder</div>
-      </div>
+        <div class="portfolio-grid">
+          <div class="portfolio-item">
+            <img src="" alc:\Users\dainc\Desktop\IMG_8373-HDR.jpgt="Portfolio image 1" />
+          </div>
+          <div class="portfolio-item">
+            <img src="images/photo2.jpg" alt="Portfolio image 2" />
+          </div>
+          <div class="portfolio-item">
+            <img src="images/photo3.jpg" alt="Portfolio image 3" />
+          </div>
+          <div class="portfolio-item">
+            <img src="images/photo4.jpg" alt="Portfolio image 4" />
+          </div>
+        </div>
     </section>
   </main>
   <footer>
