changes protfolio image desintatin

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
         <!-- Replace these divs with your actual images -->
         <div class="portfolio-grid">
           <div class="portfolio-item">
-            <img src="alc:\Users\dainc\Desktop\IMG_8373-HDR.jpgt="/>
+            <img src="images/photo1.jpg" alt="Portfolio image 1" />
           </div>
           <div class="portfolio-item">
             <img src="images/photo2.jpg" alt="Portfolio image 2" />
