--- a/portfolio.html
+++ b/portfolio.html
@@ -22,16 +22,16 @@
       <h2>Portfolio</h2>
       <div class="portfolio-grid">
         <div class="portfolio-item">
-          <img src="images/photo1.jpg" alt="Portfolio image 1" />
+          <img src="images/hoto1.jpg" alt="Portfolio image 1" />
         </div>
         <div class="portfolio-item">
-          <img src="images/photo2.jpg" alt="Portfolio image 2" />
+          <img src="images/poto2.jpg" alt="Portfolio image 2" />
         </div>
         <div class="portfolio-item">
-          <img src="images/photo3.jpg" alt="Portfolio image 3" />
+          <img src="images/poto3.jpg" alt="Portfolio image 3" />
         </div>
         <div class="portfolio-item">
-          <img src="images/photo4.jpg" alt="Portfolio image 4" />
+          <img src="images/phoo4.jpg" alt="Portfolio image 4" />
         </div>
       </div>
     </section>
