changes to image

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
       <h2>Portfolio</h2>
       <div class="portfolio-grid">
         <div class="portfolio-item">
-          <img src="images/photo1.jpg" alt="Portfolio image 1" />
+          <img src="photo1.jpg" alt="Portfolio image 1" />
         </div>
         <div class="portfolio-item">
           <img src="images/photo2.jpg" alt="Portfolio image 2" />
