--- a/portfolio.html
+++ b/portfolio.html
@@ -25,13 +25,13 @@
           <img src="photo1.jpg" alt="Portfolio image 1" />
         </div>
         <div class="portfolio-item">
-          <img src="images/photo2.jpg" alt="Portfolio image 2" />
+          <img src="photo2.jpg" alt="Portfolio image 2" />
         </div>
         <div class="portfolio-item">
-          <img src="images/photo3.jpg" alt="Portfolio image 3" />
+          <img src="photo3.jpg" alt="Portfolio image 3" />
         </div>
         <div class="portfolio-item">
-          <img src="images/photo4.jpg" alt="Portfolio image 4" />
+          <img src="photo4.jpg" alt="Portfolio image 4" />
         </div>
       </div>
     </section>
