--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
         <li><a href="about.html">About</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="pricing.html">Pricing</a></li>
+        <li><a href="contact.html">Contact Me</a></li>
       </ul>
     </nav>
   </header>
