--- a/pricing.html
+++ b/pricing.html
@@ -24,18 +24,18 @@
       <div class="pricing-packages">
         <div class="package">
           <h3>Basic Package</h3>
-          <p>Starting at $200</p>
-          <p>Includes a limited number of photos and basic editing.</p>
+          <p>Starting at $100</p>
+          <p>Includes a limited number of photos and basic editing. 35 photos.</p>
         </div>
         <div class="package">
           <h3>Standard Package</h3>
-          <p>Starting at $400</p>
-          <p>Includes additional photos and enhanced editing options.</p>
+          <p>Starting at $150</p>
+          <p>Includes additional photos and enhanced editing options. 45 photos.</p>
         </div>
         <div class="package">
           <h3>Premium Package</h3>
-          <p>Starting at $600</p>
-          <p>Includes all photos, advanced editing, and a custom photo album.</p>
+          <p>Starting at $250</p>
+          <p>Includes all photos, advanced editing, and a custom photo album. 60 photos, with floorplan and 2 minute video. </p>
         </div>
       </div>
     </section>
