--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="pricing.html">Pricing</a></li>
+        <li><a href="https://7aszqk-cr.myshopify.com/" target="_blank" rel="noopener noreferrer">Pricing</a></li>        <li><a href="contact.html">Contact Me</a></li>
         <li><a href="contact.html">Contact Me</a></li>
       </ul>
     </nav>
@@ -22,7 +22,7 @@
     <section class="contact-content">
       <h2>Contact Me</h2>
       <p>If you have any questions or would like to book a session, please fill out the form below.</p>
-      <form action="#" method="post">
+      <form action="" method="post">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required />
 
