--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="pricing.html">Pricing</a></li>
+        <li><a href="https://7aszqk-cr.myshopify.com/" target="_blank" rel="noopener noreferrer">Pricing</a></li>        <li><a href="contact.html">Contact Me</a></li>
         <li><a href="contact.html">Contact Me</a></li>
       </ul>
     </nav>
