removed dumb exp

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <section class="experience section">
       <h2>Experience</h2>
       <div class="experience-item">
-        <h3>Western Michigan University - Student LAN Technician</h3>
+        <h3>Western Michigan University - WMUx - Student LAN Technician</h3>
         <p>June 2024 - Present | Kalamazoo, Michigan, United States</p>
       </div>
       <div class="experience-item">
@@ -118,26 +118,7 @@
         <h3>Business Analytics and Information Technology (BAIT) - President</h3>
         <p>April 2024 - Present | Kalamazoo, Michigan, United States</p>
       </div>
-      <div class="experience-item">
-        <h3>DeHamer Landscaping - Landscaper</h3>
-        <p>June 2023 | Byron Center, Michigan, United States</p>
-      </div>
-      <div class="experience-item">
-        <h3>Van Andel Arena - Concessionaire</h3>
-        <p>January 2023 - March 2023 | Grand Rapids, Michigan, United States</p>
-      </div>
-      <div class="experience-item">
-        <h3>Walgreens - Customer Service Associate</h3>
-        <p>June 2021 - March 2023 | Jenison, Michigan, United States</p>
-      </div>
-      <div class="experience-item">
-        <h3>Target - Specialty Sales Representative</h3>
-        <p>November 2021 - December 2021 | Grandville, Michigan, United States</p>
-      </div>
-      <div class="experience-item">
-        <h3>Marco's Pizza (Marco's Franchising, LLC) - Insider</h3>
-        <p>March 2021 - May 2021 | Jenison, Michigan, United States</p>
-      </div>
+     
     </section>
     <!-- Education -->
     <section class="education section">
