--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       <h2>Education</h2>
       <div class="education-item">
         <h3>Western Michigan University - Haworth College of Business</h3>
-        <p>Bachelor of Business Administration (BBA), Computer Informational Systems | August 2023 - December 2026</p>
+        <p>Bachelor of Business Administration (BBA), Major: Computer Informational Systems, Minor: Leadership & Business Strategy | August 2023 - December 2026</p>
       </div>
       <div class="education-item">
         <h3>Hudsonville High School</h3>
