--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 </head>
 <body>
   <header>
-    <h1>Caden Carr</h1>
+    <h2>Caden Dain Carr</h2>
     <p>CIS Student at Western Michigan University | President of BAIT</p>
     <nav>
       <ul>
