--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
       font-family: 'Montserrat', sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #013220; /* Dark green background */
+      background-color: #777777; /* Dark green background */
       color: #f0f0f0;
       line-height: 1.6;
     }
     a {
-      color: #9ACD32;
+      color: #141f00;
       text-decoration: none;
       transition: color 0.3s ease-in-out;
     }
@@ -78,7 +78,7 @@
 </head>
 <body>
   <header>
-    <h2>Caden Dain Carr</h2>
+    <h1>Caden Dain Carr</h1>
     <p>CIS Student at Western Michigan University | President of BAIT</p>
     <nav>
       <ul>
