color chnage again

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       transition: color 0.3s ease-in-out;
     }
     a:hover {
-      color: #cde986;
+      color: #335ccc;
     }
     header {
       background: rgba(0, 0, 0, 0.5);
