--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       margin-bottom: 40px;
     }
     .section h2 {
-      border-bottom: 2px solid #9ACD32;
+      border-bottom: 2px solid #cc7f0c;
       padding-bottom: 5px;
     }
     .experience-item, .education-item {
