--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
     }
     h1, h2, h3 {
       margin-top: 0;
-      color: #cde986;
+      color: #322ef5;
     }
     .section {
       margin-bottom: 40px;
     }
     .section h2 {
-      border-bottom: 2px solid #cc7f0c;
+      border-bottom: 2px solid #556d24;
       padding-bottom: 5px;
     }
     .experience-item, .education-item {
