--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     }
     h1, h2, h3 {
       margin-top: 0;
-      color: #000000;
+      color: #d81ba9;
     }
     .section {
       margin-bottom: 40px;
