--- a/index.html
+++ b/index.html
@@ -90,16 +90,16 @@
   <div class="container">
     <!-- Contact Section -->
     <section class="contact section">
-      <h2>Contact</h2>
-      <p>Email: <a href="mailto:caden.msu1@gmail.com">caden.msu1@gmail.com</a></p>
-      <p>LinkedIn: <a href="https://www.linkedin.com/in/caden-carr" target="_blank">www.linkedin.com/in/caden-carr</a></p>
+      <h2>contact</h2>
+      <p>email: <a href="mailto:caden.msu1@gmail.com">caden.msu1@gmail.com</a></p>
+      <p>linkedin: <a href="https://www.linkedin.com/in/caden-carr" target="_blank">www.linkedin.com/in/caden-carr</a></p>
     </section>
     <!-- Skills -->
     
     <!-- Summary -->
     <section class="summary section">
-      <h2>Summary</h2>
-      <p>An eager and extroverted student looking to grow my knowledge in the technology field. My degree is in Computer Information Systems with an emphasis on project management and consulting. I am very involved with extracurriculars, such as being President of the student organization, Business Analytics and Information Technology (BAIT), and an active member of Bronco Cybersecurity Club.</p>
+      <h2>summary</h2>
+      <p>an eager and extroverted student looking to grow my knowledge in the technology field. My degree is in Computer Information Systems with an emphasis on project management and consulting. I am very involved with extracurriculars, such as being President of the student organization, Business Analytics and Information Technology (BAIT), and an active member of Bronco Cybersecurity Club.</p>
       <p>In addition to my academic and leadership roles, I balance two professional positions—serving as a Student LAN Tech at WMUx and a Recruitment Ambassador at the Haworth College of Business—where I develop technical expertise and refine my ability to connect with diverse audiences.</p>
       <p>My passion lies in building meaningful relationships to create impactful solutions. I am eager to explore internships, mentorship programs, and other opportunities that allow me to grow and contribute in the field of technology.</p>
     </section>
