--- a/index.html
+++ b/index.html
@@ -2,136 +2,125 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Caden Carr - Resume</title>
-  <!-- Montserrat Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Caden Carr | Resume</title>
   <style>
     body {
-      font-family: 'Montserrat', sans-serif;
+      font-family: 'Times New Roman', serif;
       margin: 0;
-      padding: 0;
-      background-color: #777777; /* Dark green background */
-      color: #f0f0f0;
-      line-height: 1.6;
-    }
-    a {
-      color: #141f00;
-      text-decoration: none;
-      transition: color 0.3s ease-in-out;
-    }
-    a:hover {
-      color: #335ccc;
+      background-color: #f8f8f8;
+      color: #111;
     }
     header {
-      background: rgba(0, 0, 0, 0.5);
+      background-color: #fff;
       padding: 20px;
       text-align: center;
-      position: sticky;
-      top: 0;
-      z-index: 100;
+      border-bottom: 1px solid #ddd;
     }
-    nav ul {
-      list-style: none;
-      padding: 0;
+    header h1 {
       margin: 0;
-      display: flex;
-      justify-content: center;
+      font-size: 32px;
     }
-    nav li {
-      margin: 0 15px;
+    header p {
+      margin: 5px 0;
+      font-size: 16px;
     }
     .container {
-      max-width: 1000px;
-      margin: 20px auto;
+      max-width: 800px;
+      margin: 0 auto;
       padding: 20px;
-      background: rgba(255, 255, 255, 0.1);
-      border-radius: 8px;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
-      animation: fadeIn 1.5s ease-in-out;
     }
-    h1, h2, h3 {
-      margin-top: 0;
-      color: #532E1F;
+    h2 {
+      border-bottom: 1px solid #ccc;
+      padding-bottom: 5px;
+      margin-top: 30px;
+    }
+    ul {
+      padding-left: 20px;
+    }
+    li {
+      margin-bottom: 10px;
     }
     .section {
-      margin-bottom: 40px;
-    }
-    .section h2 {
-      border-bottom: 2px solid #556d24;
-      padding-bottom: 5px;
-    }
-    .experience-item, .education-item {
-      margin-bottom: 20px;
-    }
-    /* Fade in animation */
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-    /* Hover scale effect on container */
-    .container:hover {
-      transform: scale(1.01);
-      transition: transform 0.3s ease-in-out;
+      margin-bottom: 30px;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>Caden Dain Carr</h1>
-    <p>CIS Student at Western Michigan University | President of BAIT</p>
-    <nav>
-      <ul>
-        <li><a href="index.html">Work</a></li>
-        <li><a href="personal.html">Personal</a></li>
-      </ul>
-    </nav>
+    <h1>Caden Carr</h1>
+    <p>Kalamazoo, MI | 616.337.4017 | cadencarr.business@gmail.com</p>
   </header>
   <div class="container">
-    <!-- Contact Section -->
-    <section class="contact section">
-      <h2>Contact</h2>
-      <p>Email: <a href="mailto:caden.msu1@gmail.com">caden.msu1@gmail.com</a></p>
-      <p>LinkedIn: <a href="https://www.linkedin.com/in/caden-carr" target="_blank">www.linkedin.com/in/caden-carr</a></p>
-    </section>
-    <!-- Skills -->
-    
-    <!-- Summary -->
-    <section class="summary section">
-      <h2>Summary</h2>
-      <p>An eager and extroverted student looking to grow my knowledge in the technology field. My degree is in Computer Information Systems with an emphasis on project management and consulting. I am very involved with extracurriculars, such as being President of the student organization, Business Analytics and Information Technology (BAIT), and an active member of Bronco Cybersecurity Club.</p>
-      <p>In addition to my academic and leadership roles, I balance two professional positions—serving as a Student LAN Tech at WMUx and a Recruitment Ambassador at the Haworth College of Business—where I develop technical expertise and refine my ability to connect with diverse audiences.</p>
-      <p>My passion lies in building meaningful relationships to create impactful solutions. I am eager to explore internships, mentorship programs, and other opportunities that allow me to grow and contribute in the field of technology.</p>
-    </section>
-    <!-- Experience -->
-    <section class="experience section">
-      <h2>Experience</h2>
-      <div class="experience-item">
-        <h3>Western Michigan University - WMUx - Student LAN Technician</h3>
-        <p>June 2024 - Present | Kalamazoo, Michigan, United States</p>
-      </div>
-      <div class="experience-item">
-        <h3>Western Michigan University - Haworth College of Business - Recruitment Ambassador</h3>
-        <p>January 2025 - Present | Kalamazoo, Michigan, United States</p>
-      </div>
-      <div class="experience-item">
-        <h3>Business Analytics and Information Technology (BAIT) - President</h3>
-        <p>April 2024 - Present | Kalamazoo, Michigan, United States</p>
-      </div>
-     
-    </section>
-    <!-- Education -->
-    <section class="education section">
+    <section class="section">
       <h2>Education</h2>
-      <div class="education-item">
-        <h3>Western Michigan University - Haworth College of Business</h3>
-        <p>Bachelor of Business Administration (BBA), Major: Computer Informational Systems, Minor: Leadership & Business Strategy | August 2023 - December 2026</p>
-      </div>
-      <div class="education-item">
-        <h3>Hudsonville High School</h3>
-        <p>August 2019 - June 2023</p>
-      </div>
+      <p><strong>Western Michigan University - Haworth College of Business</strong><br>
+      BBA, Computer Information Systems | Minor: Leadership & Business Strategy<br>
+      Kalamazoo, MI | Expected Dec 2026 | GPA: 3.80</p>
+    </section>
+
+    <section class="section">
+      <h2>Experience</h2>
+      <p><strong>WMUx</strong> — Student LAN Technician<br>Kalamazoo, MI | Jan 2024 – Present</p>
+      <ul>
+        <li>Supported over 70 administrative staff members with technical troubleshooting.</li>
+        <li>Managed 300+ user accounts via Active Directory and deployed updates using SCCM.</li>
+        <li>Upgraded AV carts, projectors, and networking infrastructure for classrooms.</li>
+      </ul>
+      <p><strong>WMU - Haworth College of Business</strong> — Recruitment Ambassador<br>Kalamazoo, MI | Jan 2024 – Present</p>
+      <ul>
+        <li>Led group tours for prospective students and parents; supported over 100 guests.</li>
+        <li>Facilitated events and admissions support with strong student engagement.</li>
+      </ul>
+    </section>
+
+    <section class="section">
+      <h2>Leadership & Involvement</h2>
+      <p><strong>Business Analytics & IT (BAIT)</strong> — President<br>WMU | Apr 2024 – Present</p>
+      <ul>
+        <li>Grew club by over 40% through events, outreach, and brand redesign.</li>
+        <li>Hosted 5+ employer spotlight and networking sessions for tech students.</li>
+        <li>Personally sourced all external speakers including C-level leaders.</li>
+        <li>Recognized by Dr. Razi (Dept. Chair) and Beth Ernst (Comm Center Dir.).</li>
+      </ul>
+      <p><strong>Broncos IGNITE!</strong> — Leadership Program<br>WMU | 2024 – Present</p>
+      <ul>
+        <li>Selected for WMU's leadership cohort based on faculty nomination.</li>
+      </ul>
+      <p><strong>Cybersecurity Club</strong> — Member<br>WMU | 2024 – Present</p>
+      <ul>
+        <li>Engaged in workshops and co-led panel at WMU Cybersecurity Summit.</li>
+      </ul>
+    </section>
+
+    <section class="section">
+      <h2>Projects</h2>
+      <p><strong>Tech Jam</strong> — Co-Founder & Organizer<br>WMU | 2024</p>
+      <ul>
+        <li>Co-founded and led WMU's first Tech Jam: hackathon, pitch, and SE competition.</li>
+        <li>Raised $5,500 in funding and managed full event execution.</li>
+      </ul>
+    </section>
+
+    <section class="section">
+      <h2>Awards & Honors</h2>
+      <ul>
+        <li>1st Place – MWC3 ERP with Scrimmage Sim</li>
+        <li>3rd Place – MWC3 Data Analytics using Tableau</li>
+        <li>Dr. Bernadine P. Branchaw Scholarship</li>
+      </ul>
+    </section>
+
+    <section class="section">
+      <h2>Skills</h2>
+      <ul>
+        <li>Java Programming – OOP, GUI, exception handling</li>
+        <li>HTML Web Design – Personal portfolio and resume website</li>
+        <li>Microsoft Office – Excel, Word, PowerPoint</li>
+        <li>Python (Basics) – Logic, automation, data parsing</li>
+      </ul>
     </section>
   </div>
 </body>
 </html>
+
